# big-purple-remote

./: .buildconfig  README.md  io.github.jhaygood86.big-purple-remote.yml  meson.build
data/: application.css  gresource.xml  gschema.xml  io.github.jhaygood86.big-purple-remote.appdata.xml.in  io.github.jhaygood86.big-purple-remote.desktop.in  meson.build
docs/: index.md
po/: POTFILES  io.github.jhaygood86.big-purple-remote.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  MainWindow.vala  RokuDevice.vala  RokuManager.vala  meson.build
src/Widgets/: RemoteGrid.vala
